Final Landing Page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,7 +42,9 @@
         "scss/sections/_registro.less",
         "scss/sections/_contacto.less",
         "scss/sections/_descargas.less",
-        "scss/sections/_footer.less"
+        "scss/sections/_footer.less",
+        "scss/sections/_windowsReg.less",
+        "scss/sections/_misionVision.less"
       ]
     }
   ],
